fix jumping on platformSelector

--- a/app/globals.css
+++ b/app/globals.css
@@ -130,6 +130,8 @@
   --border-color: #dee2e6;
   --font-family-monospace: 'Roboto Mono', SFMono-Regular, Consolas, Liberation Mono, Menlo,
     Courier, monospace;
+
+  --fade-in-animation: fadeIn;;
 }
 
 body {
@@ -141,4 +143,13 @@ body {
 
 * {
   box-sizing: border-box;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
