--- a/src/components/platformSelector/style.module.scss
+++ b/src/components/platformSelector/style.module.scss
@@ -7,6 +7,7 @@
   gap: 0.25rem;
   min-width: 15rem;
   width: 100%;
+  height: 42px;
   border-radius: 0.25rem;
   background-color: hsl(204 20% 100%);
   padding-left: 1rem;
@@ -138,6 +139,7 @@
   align-items: start;
   gap: 0.25rem;
   text-align: left;
+  animation: var(--fade-in-animation) 0.1s ease-in;
 
   .platform-icon {
     translate: 0 4px;
